--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,13 +1,19 @@
 <div class="container">
-<h1>Games#new</h1>
+<h1>New game</h1>
+
 <div class="mixed">
-  <%= @grid %>
+  <% @letters.each do |item| %>
+    <div class="item">
+        <%= item.capitalize %>
+    </div>
+  <%end%>
 </div>
-<form action="/score" method="post">
+
+<form class="form" action="/score" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Type your answer">
+    <input type="text" class="form-control" name="answer" placeholder="Type your answer">
   </div>
-  <input type="submit" class="btn btn-primary" />
+  <button type="submit" class="btn btn-primary mb-2">Play</button>
 </form>
 </div>
