--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,2 +1,10 @@
-<h1>Games#score</h1>
-<p>Find me in app/views/games/score.html.erb</p>
+
+<div class="container">
+  <h1>Result</h1>
+  <p><%= @alert %></p>
+  <p><%= @lett %></p>
+  <p><%= @test %></p>
+  <h3><%= @score %></h3>
+  <%= link_to "Play again", new_path %>
+</div>
+
