--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,11 @@
  *= require_tree .
  *= require_self
  */
- body{
+  @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
+
+ .center{
+  text-align: center;
  }
 
  .mixed{
@@ -39,6 +42,8 @@
 
  .container{
     margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 20px;
  }
 
  form{
